Day 12 - JS Intermediate (25-09-24)

--- a/10_JS_DOM/index.html
+++ b/10_JS_DOM/index.html
@@ -10,12 +10,26 @@
     <a href="https://google.com">Learn More</a>
 
 
+    <button id="submit-btn">Submit Now</button>
+    
     <p id="demoDOM"></p>
 
+    <h2 id="demoH2"></h2>
+
+    <img src="" alt="JS" id="myImg" width="300px">
+
+    <p>Element</p>
+
+    <h2 class="classH2"></h2>
+
+    <h3 id="demoH3"></h3>
 
 
+    <div id="box"></div>
 
+    <img id="setAtt" src=""/>
 
+   
 
 
     <script src="./script.js"></script>
