Day 13 - JS Intermediate (14-10-24)

--- a/10_JS_DOM/index.html
+++ b/10_JS_DOM/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>JS DOM</h1>
-    <a href="https://google.com">Learn More</a>
+    <a href="https://google.com" id="link">Learn More</a>
 
 
     <button id="submit-btn">Submit Now</button>
@@ -29,9 +29,15 @@
 
     <img id="setAtt" src=""/>
 
+
+<!-- Date 14th -->
+    <h5 id="dom"></h5>
    
 
-
+    <div id="parentDiv">
+        <div id="oldDiv">This is the old child that will be replaced</div>
+    </div>
+    
     <script src="./script.js"></script>
 </body>
 </html>
