--- a/10_JS_DOM/index.html
+++ b/10_JS_DOM/index.html
@@ -37,6 +37,13 @@
     <div id="parentDiv">
         <div id="oldDiv">This is the old child that will be replaced</div>
     </div>
+
+
+    <ul id="menu">
+        <li>HomePage</li> <!--Home-->
+        <li>About</li>
+        <li>Contact</li>
+    </ul>
     
     <script src="./script.js"></script>
 </body>
