Day 15 - JS Intermediate (16-10-24)

--- a/12_JS_events/index.html
+++ b/12_JS_events/index.html
@@ -21,6 +21,9 @@
 
     <button id="onClick">Click Me</button>
 
+    <input type="text" placeholder="enter name" id="input">
+
+
     <script src="./script.js"></script>
 </body>
 </html>
